--- a/src/views/signup.jade
+++ b/src/views/signup.jade
@@ -11,12 +11,13 @@ block body
       a(href="/signup") Sign up
   section#signup
     form#signupForm(class="mainForm", name="signupForm", action="/signup", method="POST")
-      label(for="username") Username: 
+      label(for="username") Username:
       input#user(type="text", name="username", placeholder="username")
-      label(for="pass") Password: 
+      label(for="pass") Password:
       input#pass(type="password", name="pass", placeholder="password")
-      label(for="pass2") Password: 
+      label(for="pass2") Password:
       input#pass2(type="password", name="pass2", placeholder="retype password")
+      input(type="hidden", name="_csrf", value="#{csrfToken}")
       a#signupSubmit(class="formSubmit", href="#") Sign up
   #domoMessage
     img#speech(src="/assets/img/speech.png", alt="speech box")
